# cartright

./: .env.example  .gitignore  CARTRIGHT-RETROSPECTIVE.md  GO-LIVE.md  PRD.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
scripts/: dump_candidates.py
src/cartright/: __main__.py  app.py  cli.py  main.py  preflight.py  ratelimit.py  review_links.py  scheduler.py
src/cartright/interaction/: conversation.py  web.py
src/cartright/llm/: alerts.py  claude.py  preferences.py
src/cartright/review/: render.py  web.py
src/cartright/review/templates/: review.html
src/cartright/shopping_engine/: __init__.py  cadence.py  db.py  engine.py  pricing.py
src/cartright/shopping_engine/adapters/: base.py  fixtures.py  order_history.py  telegram.py  twilio_sms.py  walmart.py
tests/: test_cadence.py  test_cart.py  test_cli_alert_once.py  test_cli_checks.py  test_cli_decisions.py  test_cli_doctor.py  test_deals.py  test_decision_log.py  test_health.py  test_last_paid_price.py  test_multi_item_tracking.py  test_no_auto_submit.py  test_order_history_adapter.py  test_preference_capture_sms.py  test_preference_capture_telegram.py  test_preferences.py  test_readiness.py  test_review_security.py  test_review_ui.py  test_scheduler.py  test_shopping_engine_skeleton.py  test_telegram_adapter.py  test_telegram_rate_limit.py  test_telegram_webhook_secret.py  test_twilio_adapter.py  test_twilio_webhook_signature.py  test_walmart_catalog_adapter.py
