[project]
name = "cartright"
version = "0.1.0"
description = "A texting-based personal shopping agent for Walmart."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cartright"]

[tool.pytest.ini_options]
testpaths = ["tests"]
