[project]
name = "cartright"
version = "0.1.0"
description = "A texting-based personal shopping agent for Walmart."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.112.0",
    "cryptography>=49.0.0",
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "twilio>=9.10.9",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
cartright = "cartright.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.15.19",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cartright"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter helpers are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.Query", "fastapi.Form", "fastapi.Path", "fastapi.Body", "fastapi.Depends"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
